// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`platform/gitlab/index createPr(branchName, title, body) returns the PR 1`] = `
Object {
  "displayNumber": "Merge Request #12345",
  "id": 1,
  "iid": 12345,
  "number": 12345,
  "sourceBranch": "some-branch",
  "title": "some title",
}
`;

exports[`platform/gitlab/index createPr(branchName, title, body) supports draftPR on < 13.2 1`] = `
Object {
  "displayNumber": "Merge Request #12345",
  "id": 1,
  "iid": 12345,
  "isDraft": true,
  "number": 12345,
  "sourceBranch": "some-branch",
  "title": "some title",
}
`;

exports[`platform/gitlab/index createPr(branchName, title, body) supports draftPR on >= 13.2 1`] = `
Object {
  "displayNumber": "Merge Request #12345",
  "id": 1,
  "iid": 12345,
  "isDraft": true,
  "number": 12345,
  "sourceBranch": "some-branch",
  "title": "some title",
}
`;

exports[`platform/gitlab/index createPr(branchName, title, body) uses default branch 1`] = `
Object {
  "displayNumber": "Merge Request #12345",
  "id": 1,
  "iid": 12345,
  "number": 12345,
  "sourceBranch": "some-branch",
  "title": "some title",
}
`;

exports[`platform/gitlab/index filterUnavailableUsers(users) filters users that are busy 1`] = `
Array [
  "john",
]
`;

exports[`platform/gitlab/index filterUnavailableUsers(users) keeps users with failing requests 1`] = `
Array [
  "maria",
]
`;

exports[`platform/gitlab/index filterUnavailableUsers(users) keeps users with missing availability 1`] = `
Array [
  "maria",
]
`;

exports[`platform/gitlab/index getBranchPr(branchName) should return the PR object 1`] = `
Object {
  "body": undefined,
  "displayNumber": "Merge Request #91",
  "hasAssignees": false,
  "hasReviewers": false,
  "labels": undefined,
  "number": 91,
  "sha": undefined,
  "sourceBranch": "some-branch",
  "state": "open",
  "targetBranch": "master",
  "title": "some change",
}
`;

exports[`platform/gitlab/index getBranchPr(branchName) should strip deprecated draft prefix from title 1`] = `
Object {
  "body": undefined,
  "displayNumber": "Merge Request #91",
  "hasAssignees": false,
  "hasReviewers": false,
  "isDraft": true,
  "labels": undefined,
  "number": 91,
  "sha": undefined,
  "sourceBranch": "some-branch",
  "state": "open",
  "targetBranch": "master",
  "title": "some change",
}
`;

exports[`platform/gitlab/index getBranchPr(branchName) should strip draft prefix from title 1`] = `
Object {
  "body": undefined,
  "displayNumber": "Merge Request #91",
  "hasAssignees": false,
  "hasReviewers": false,
  "isDraft": true,
  "labels": undefined,
  "number": 91,
  "sha": undefined,
  "sourceBranch": "some-branch",
  "state": "open",
  "targetBranch": "master",
  "title": "some change",
}
`;

exports[`platform/gitlab/index getBranchStatus(branchName, requiredStatusChecks) throws repository-changed 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc123",
      "host": "gitlab.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitlab.com/api/v4/projects/some%2Frepo",
  },
]
`;

exports[`platform/gitlab/index getPr(prNo) removes deprecated draft prefix from returned title 1`] = `
Object {
  "body": "a merge request",
  "canMerge": false,
  "displayNumber": "Merge Request #12345",
  "hasAssignees": false,
  "hasReviewers": false,
  "isConflicted": true,
  "isDraft": true,
  "labels": undefined,
  "number": 12345,
  "sha": undefined,
  "sourceBranch": "some-branch",
  "state": "merged",
  "targetBranch": "master",
  "title": "do something",
}
`;

exports[`platform/gitlab/index getPr(prNo) removes draft prefix from returned title 1`] = `
Object {
  "body": "a merge request",
  "canMerge": false,
  "displayNumber": "Merge Request #12345",
  "hasAssignees": false,
  "hasReviewers": false,
  "isConflicted": true,
  "isDraft": true,
  "labels": undefined,
  "number": 12345,
  "sha": undefined,
  "sourceBranch": "some-branch",
  "state": "merged",
  "targetBranch": "master",
  "title": "do something",
}
`;

exports[`platform/gitlab/index getPr(prNo) returns the PR 1`] = `
Object {
  "body": "a merge request",
  "canMerge": false,
  "displayNumber": "Merge Request #12345",
  "hasAssignees": false,
  "hasReviewers": false,
  "isConflicted": true,
  "labels": undefined,
  "number": 12345,
  "sha": undefined,
  "sourceBranch": "some-branch",
  "state": "merged",
  "targetBranch": "master",
  "title": "do something",
}
`;

exports[`platform/gitlab/index getPr(prNo) returns the PR with nonexisting branch 1`] = `
Object {
  "body": "a merge request",
  "canMerge": false,
  "displayNumber": "Merge Request #12345",
  "hasAssignees": true,
  "hasReviewers": false,
  "isConflicted": true,
  "labels": undefined,
  "number": 12345,
  "sha": undefined,
  "sourceBranch": "some-branch",
  "state": "open",
  "targetBranch": "master",
  "title": "do something",
}
`;

exports[`platform/gitlab/index getPr(prNo) returns the mergeable PR 1`] = `
Object {
  "body": "a merge request",
  "canMerge": true,
  "displayNumber": "Merge Request #12345",
  "hasAssignees": true,
  "hasReviewers": false,
  "labels": undefined,
  "number": 12345,
  "sha": undefined,
  "sourceBranch": "some-branch",
  "state": "open",
  "targetBranch": "master",
  "title": "do something",
}
`;

exports[`platform/gitlab/index getRepos should return an array of repos 1`] = `
Array [
  "a/b",
  "c/d",
]
`;

exports[`platform/gitlab/index initPlatform() should accept custom endpoint 1`] = `
Object {
  "endpoint": "https://gitlab.renovatebot.com/",
  "gitAuthor": "Renovate Bot <a@b.com>",
}
`;

exports[`platform/gitlab/index initPlatform() should default to gitlab.com 1`] = `
Object {
  "endpoint": "https://gitlab.com/api/v4/",
  "gitAuthor": "Renovate Bot <a@b.com>",
}
`;

exports[`platform/gitlab/index initRepo should fall back respecting when GITLAB_IGNORE_REPO_URL is set 1`] = `
Array [
  Array [
    Object {
      "cloneSubmodules": undefined,
      "defaultBranch": "master",
      "gitAuthorEmail": undefined,
      "gitAuthorName": undefined,
      "ignorePrAuthor": undefined,
      "mergeMethod": "merge",
      "repository": "some%2Frepo%2Fproject",
      "url": "http://oauth2:abc123@mycompany.com/gitlab/some/repo/project.git",
    },
  ],
]
`;

exports[`platform/gitlab/index massageMarkdown(input) returns updated pr body 1`] = `
"https://github.com/foo/bar/issues/5 plus also [a link](https://github.com/foo/bar/issues/5

  Merge Requests are the best, here are some MRs.

  ## Open

These updates have all been created already. Click a checkbox below to force a retry/rebase of any.

 - [ ] <!-- rebase-branch=renovate/major-got-packages -->[build(deps): update got packages (major)](!2433) (\`gh-got\`, \`gl-got\`, \`got\`)
"
`;
